@@ -137,12 +137,41 @@ data:extend({
     },
     time = 30
   }
+},
+{
+  type = 'technology',
+  name = 'sb-steam-power',
+  icon = '__base__/graphics/icons/fluid/steam.png',
+  icon_size = 64,
+  icon_mipmaps = 4,
+  order = 'a-a',
+  prerequisites = {
+  },
+  effects = {
+    {
+      type = 'unlock-recipe',
+      recipe = 'boiler'
+    },
+    {
+      type = 'unlock-recipe',
+      recipe = 'steam-engine'
+    }
+  },
+  unit = {
+    count = 10,
+    ingredients = {
+      {type = 'item', name = 'automation-science-pack', amount = 1}
+    },
+    time = 15
+  }
 }
 })
 
 bobmods.lib.recipe.enabled('copper-pipe-to-ground', false)
 bobmods.lib.recipe.enabled('basic-circuit-board', false)
 bobmods.lib.recipe.enabled('automation-science-pack', false)
+bobmods.lib.recipe.enabled('boiler', false)
+bobmods.lib.recipe.enabled('steam-engine', false)
 if data.raw.recipe['basic-transport-belt'] then
   bobmods.lib.tech.add_recipe_unlock('sb-startup3', 'basic-transport-belt')
 else
