@@ -1,5 +1,7 @@
 Version: 0.5.12
 Date: ???
+  Changes:
+    - Added tech Steam power #271
   Bugfixes:
     - Basic Chemistry 2 tech missing green science #269
     - Fix multiple startitems in rock-chest and playerinventory #268
